syntax = "proto3";

option java_multiple_files = true;
option java_package = "co.elastic.apm.agent.grpc.testapp";

package helloworld;

service Hello {
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }
}

message HelloRequest {
    string userName = 1;
}

message HelloReply {
    string message = 1;
}
